# uPHATE

./: .gitignore  .gitmodules  README.md  pyproject.toml
examples/: bone_marrow_data.ipynb  derivative.ipynb  embryoid_body_data.ipynb  sparsity.ipynb  synthetic_tree.ipynb
notebooks/: 0.01-SERGIO-simulation.ipynb  basic_phate.ipynb  bone_marrow_data.ipynb  correlations.ipynb  derivative.ipynb  embryoid_body_data.ipynb  nn_surrogate.ipynb  sergio_evaluation.ipynb  shapes_with_curvature_and_singularities.ipynb
scripts/: benchmark_jacobian.py  benchmark_mds.py  phate_uncertainty_plots.py  plots.sh  synthetic_tree_plots.py  timing.py  train_phate_surrogate.py
src/scripts/: generate_sample_phate.py
src/uphate/: __init__.py  jax_utils.py  landmark.py  mds.py  nn.py  numpy_interface.py  plotting.py  uphate.py  utils.py  von_neumann_entropy.py
tests/: test_phate_match.py
