[project]
name = "uphate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anndata>=0.10.9",
    "cr-sparse>=0.4.0",
    "flax>=0.8.5",
    "ipykernel>=6.31.0",
    "jax>=0.4.30",
    "jax[cuda12]>=0.4.30 ; sys_platform == 'linux'",
    "jaxopt>=0.8.5",
    "numpy==1.26.4",
    "pcax>=0.1.0",
    "scanpy>=1.10.3",
    "seaborn>=0.13.2",
    "sparsejac>=0.2.0",
    "tensorboard>=2.20.0",
    "tensorboard-plugin-profile>=2.21.3",
    "zadu>=0.2.1",
]

[project.optional-dependencies]
phate = [
    "phate>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.1",
    "xprof>=2.21.3",
]

[build-system]
requires = ["uv-build>=0.1.0"] # Or other build backend requirements
build-backend = "uv_build"
